--- a/index.html
+++ b/index.html
@@ -25,41 +25,41 @@
 	<center>
     <div class="column">
 	<h3>
-	<p> <a href="C:\Караоке\pages\konem.html">Любэ - Выйду ночью в поле с конем</a></p>
-	<p> <a href="C:\Караоке\pages\asmolov-otvetchik.html">Владимир Асмолов - Автоответчик</a></p>
-	<p> <a href="C:\Караоке\pages\Asmolov_1000letodinochestva.html">Владимир Асмолов - 1000 Лет Одиночества</a></p>
-	<p> <a href="C:\Караоке\pages\Asmolov_Osen'_Juzni.html">Владимир Асмолов - Осень жизни</a></p>
-	<p> <a href="C:\Караоке\pages\Asmolov_Slav_bazar.html">Владимир Асмолов - Славянский базар</a></p>
-	<p> <a href="C:\Караоке\pages\bi-2-reki-lyubvi-minus.html">Би-2 - Реки любви</a></p>
-	<p> <a href="C:\Караоке\pages\bi-2-skol-zkie-ulicy-minus--2.html">Би-2 - Скользкие улицы</a></p>
-	<p> <a href="C:\Караоке\pages\veter_peremen.html">Би-2 - Ветер перемен</a></p>
-	<p> <a href="C:\Караоке\pages\Black_Kofe_Listya.html">Черный Кофе - Листья</a></p>
-	<p> <a href="C:\Караоке\pages\Black_Kofe_za_oknom.html">Чёрный Кофе - Пылает за окном звезда</a></p>
-	<p> <a href="C:\Караоке\pages\brainstorm_-_a_mi_guljaem__mi_krutie__aga_(zf.fm).html">Brainstorm - А мы гуляем,мы крутые</a></p>
-	<p> <a href="C:\Караоке\pages\Brainstorm_Plenka_Stop.html">Brainstorm - Ветер</a></p>
+	<p> <a href="C:\Karaoke\francais19.github.io\francais19.github.io\pages\konem.html">Любэ - Выйду ночью в поле с конем</a></p>
+	<p> <a href="C:\Karaoke\francais19.github.io\francais19.github.io\pages\asmolov-otvetchik.html">Владимир Асмолов - Автоответчик</a></p>
+	<p> <a href="C:\Karaoke\francais19.github.io\francais19.github.io\pages\Asmolov_1000letodinochestva.html">Владимир Асмолов - 1000 Лет Одиночества</a></p>
+	<p> <a href="C:\Karaoke\francais19.github.io\francais19.github.io\pages\Asmolov_Osen'_Juzni.html">Владимир Асмолов - Осень жизни</a></p>
+	<p> <a href="C:\Karaoke\francais19.github.io\francais19.github.io\pages\Asmolov_Slav_bazar.html">Владимир Асмолов - Славянский базар</a></p>
+	<p> <a href="C:\Karaoke\francais19.github.io\francais19.github.io\pages\bi-2-reki-lyubvi-minus.html">Би-2 - Реки любви</a></p>
+	<p> <a href="C:\Karaoke\francais19.github.io\francais19.github.io\pages\bi-2-skol-zkie-ulicy-minus--2.html">Би-2 - Скользкие улицы</a></p>
+	<p> <a href="C:\Karaoke\francais19.github.io\francais19.github.io\pages\veter_peremen.html">Би-2 - Ветер перемен</a></p>
+	<p> <a href="C:\Karaoke\francais19.github.io\francais19.github.io\pages\Black_Kofe_Listya.html">Черный Кофе - Листья</a></p>
+	<p> <a href="C:\Karaoke\francais19.github.io\francais19.github.io\pages\Black_Kofe_za_oknom.html">Чёрный Кофе - Пылает за окном звезда</a></p>
+	<p> <a href="C:\Karaoke\francais19.github.io\francais19.github.io\pages\brainstorm_-_a_mi_guljaem__mi_krutie__aga_(zf.fm).html">Brainstorm - А мы гуляем,мы крутые</a></p>
+	<p> <a href="C:\Karaoke\francais19.github.io\francais19.github.io\pages\Brainstorm_Plenka_Stop.html">Brainstorm - Ветер</a></p>
 	
 	
-	<p> <a href="C:\Караоке\pages\Brainstorm_Vixodnie.html">Brainstorm - Выходные</a></p>
-	<p> <a href="C:\Караоке\pages\DDT_ETO_VSE.html">ДДТ - Это все</a></p>
-	<p> <a href="C:\Караоке\pages\Lesopoval_Belya_Leped.html">Лесоповал - Белый лебедь</a></p>
-	<p> <a href="C:\Караоке\pages\Lesopoval_ya-kuplyu-tebe-dom-plus.html">Лесоповал - Я куплю тебе дом</a></p>
-	<p> <a href="C:\Караоке\pages\Lubov_Razlyka_Ludmila.html">Людмила Сенчина - Любовь И Разлука</a></p>
-	<p> <a href="C:\Караоке\pages\Rojdestvo_Igla.html">Рождество - Игла</a></p>
-	<p> <a href="C:\Караоке\pages\Rojdestvo_Karandawi.html">Рождество - Карандаши</a></p>
-	<p> <a href="C:\Караоке\pages\Rojdestvo_Molodost.html">Рождество - Молодость</a></p>
-	<p> <a href="C:\Караоке\pages\Rojdestvo_Tvoi_Glaza.html">Рождество - Твои глаза</a></p>
+	<p> <a href="C:\Karaoke\francais19.github.io\francais19.github.io\pages\Brainstorm_Vixodnie.html">Brainstorm - Выходные</a></p>
+	<p> <a href="C:\Karaoke\francais19.github.io\francais19.github.io\pages\DDT_ETO_VSE.html">ДДТ - Это все</a></p>
+	<p> <a href="C:\Karaoke\francais19.github.io\francais19.github.io\pages\Lesopoval_Belya_Leped.html">Лесоповал - Белый лебедь</a></p>
+	<p> <a href="C:\Karaoke\francais19.github.io\francais19.github.io\pages\Lesopoval_ya-kuplyu-tebe-dom-plus.html">Лесоповал - Я куплю тебе дом</a></p>
+	<p> <a href="C:\Karaoke\francais19.github.io\francais19.github.io\pages\Lubov_Razlyka_Ludmila.html">Людмила Сенчина - Любовь И Разлука</a></p>
+	<p> <a href="C:\Karaoke\francais19.github.io\francais19.github.io\pages\Rojdestvo_Igla.html">Рождество - Игла</a></p>
+	<p> <a href="C:\Karaoke\francais19.github.io\francais19.github.io\pages\Rojdestvo_Karandawi.html">Рождество - Карандаши</a></p>
+	<p> <a href="C:\Karaoke\francais19.github.io\francais19.github.io\pages\Rojdestvo_Molodost.html">Рождество - Молодость</a></p>
+	<p> <a href="C:\Karaoke\francais19.github.io\francais19.github.io\pages\Rojdestvo_Tvoi_Glaza.html">Рождество - Твои глаза</a></p>
 	
 	
 	
-	<p> <a href="C:\Караоке\pages\Sinya_Ptica_Klen_Wymit.html">Синяя Птица - Клён</a></tr>
-	<p> <a href="C:\Караоке\pages\Voskr_Bury_i_metel.html">Воскресенье - Бури и метели</a></p>
-	<p> <a href="C:\Караоке\pages\Voskr_ne_ostav_menya.html">Воскресенье - Не Оставь Меня</a></p>
-	<p> <a href="C:\Караоке\pages\Voskr_Slychilos.html">Воскресенье - Случилось что-то в городе моем текст песни</a></p>
-	<p> <a href="C:\Караоке\pages\Voskr_Snow_Women.html">Воскресенье - Снежная баба</a></p>
-	<p> <a href="C:\Караоке\pages\Voskr_Veterok.html">Воскресенье - Ветерок</a></p>
-	<p> <a href="C:\Караоке\pages\Voskr_When_Poimew_Menya.html">Воскресенье - Когда поймешь умом</a></p>
-	<p> <a href="C:\Караоке\pages\Aria_Poter_ray.html">Ария - Потерянный рай</a></p>
-	<p> <a href="C:\Караоке\pages\Aria_Take_my_Heart.html">Ария - Возьми мое сердце</a></p>
+	<p> <a href="C:\Karaoke\francais19.github.io\francais19.github.io\pages\Sinya_Ptica_Klen_Wymit.html">Синяя Птица - Клён</a></tr>
+	<p> <a href="C:\Karaoke\francais19.github.io\francais19.github.io\pages\Voskr_Bury_i_metel.html">Воскресенье - Бури и метели</a></p>
+	<p> <a href="C:\Karaoke\francais19.github.io\francais19.github.io\pages\Voskr_ne_ostav_menya.html">Воскресенье - Не Оставь Меня</a></p>
+	<p> <a href="C:\Karaoke\francais19.github.io\francais19.github.io\pages\Voskr_Slychilos.html">Воскресенье - Случилось что-то в городе моем текст песни</a></p>
+	<p> <a href="C:\Karaoke\francais19.github.io\francais19.github.io\pages\Voskr_Snow_Women.html">Воскресенье - Снежная баба</a></p>
+	<p> <a href="C:\Karaoke\francais19.github.io\francais19.github.io\pages\Voskr_Veterok.html">Воскресенье - Ветерок</a></p>
+	<p> <a href="C:\Karaoke\francais19.github.io\francais19.github.io\pages\Voskr_When_Poimew_Menya.html">Воскресенье - Когда поймешь умом</a></p>
+	<p> <a href="C:\Karaoke\francais19.github.io\francais19.github.io\pages\Aria_Poter_ray.html">Ария - Потерянный рай</a></p>
+	<p> <a href="C:\Karaoke\francais19.github.io\francais19.github.io\pages\Aria_Take_my_Heart.html">Ария - Возьми мое сердце</a></p>
 	</h3>
 	</div>
 	</center>
