--- a/pages/konem.html
+++ b/pages/konem.html
@@ -14,7 +14,7 @@
     }
   </style> 
     <center><h1>Любэ - Выйду ночью в поле с конем</h1></center>
-	<center><audio id="player" src="C:\Караоке\song\konem.mp3" controls></audio>
+	<center><audio id="player" src="song\konem.mp3" controls></audio>
 </center>
 	<center><pre data-lines="38" id="lyrics-original" class=""><span>Выйду ночью в поле с конем,</span>
 <span>Ночкой темной тихо пойдем,</span>
