--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<center>
     <div class="column">
 	<h3>
-	<p> <a href="C:\Karaoke\francais19.github.io\francais19.github.io\pages\konem.html">Любэ - Выйду ночью в поле с конем</a></p>
+	<p> <a href="pages\konem.html">Любэ - Выйду ночью в поле с конем</a></p>
 	<p> <a href="C:\Karaoke\francais19.github.io\francais19.github.io\pages\asmolov-otvetchik.html">Владимир Асмолов - Автоответчик</a></p>
 	<p> <a href="C:\Karaoke\francais19.github.io\francais19.github.io\pages\Asmolov_1000letodinochestva.html">Владимир Асмолов - 1000 Лет Одиночества</a></p>
 	<p> <a href="C:\Karaoke\francais19.github.io\francais19.github.io\pages\Asmolov_Osen'_Juzni.html">Владимир Асмолов - Осень жизни</a></p>
