--- a/pages/Aria_Take_my_Heart.html
+++ b/pages/Aria_Take_my_Heart.html
@@ -14,7 +14,7 @@
     }
   </style> 
     <center><h1>Ария - Возьми мое сердце</h1></center>
-	<center><audio id="player" src="C:\Караоке\song\Aria_Take_my_Heart.mp3" controls></audio>
+	<center><audio id="player" src="song\Aria_Take_my_Heart.mp3" controls></audio>
 </center>
 	<center>
 	<h1>
