--- a/pages/Asmolov_1000letodinochestva.html
+++ b/pages/Asmolov_1000letodinochestva.html
@@ -14,7 +14,7 @@
     }
   </style> 
     <center><h1>Владимир Асмолов - 1000 Лет Одиночества</h1></center>
-	<center><audio id="player" src="C:\Караоке\song\Asmolov_1000letodinochestva.mp3" controls></audio>
+	<center><audio id="player" src="song\Asmolov_1000letodinochestva.mp3" controls></audio>
 </center>
 	<center>
 	<h1>
