--- a/pages/Asmolov_Osen'_Juzni.html
+++ b/pages/Asmolov_Osen'_Juzni.html
@@ -14,7 +14,7 @@
     }
   </style> 
     <center><h1>Владимир Асмолов - Осень жизни</h1></center>
-	<center><audio id="player" src="C:\Караоке\song\Asmolov_Osen'_Juzni.mp3" controls></audio>
+	<center><audio id="player" src="song\Asmolov_Osen'_Juzni.mp3" controls></audio>
 </center>
 	<center>
 <h1>
