--- a/pages/Asmolov_Slav_bazar.html
+++ b/pages/Asmolov_Slav_bazar.html
@@ -14,7 +14,7 @@
     }
   </style> 
     <center><h1>Владимир Асмолов - Славянский базар</h1></center>
-	<center><audio id="player" src="C:\Караоке\song\Asmolov_Slav_bazar.mp3" controls></audio>
+	<center><audio id="player" src="song\Asmolov_Slav_bazar.mp3" controls></audio>
 </center>
 	<center>                   
 	<h3>
