--- a/pages/Black_Kofe_Listya.html
+++ b/pages/Black_Kofe_Listya.html
@@ -14,7 +14,7 @@
     }
   </style> 
     <center><h1>Черный кофе - Листья</h1></center>
-	<center><audio id="player" src="C:\Караоке\song\Black_Kofe_Listya.mp3" controls></audio>
+	<center><audio id="player" src="song\Black_Kofe_Listya.mp3" controls></audio>
 </center>
 <h1>
 	<center><p class="textPesni">С ветки падающий лист<br>
