--- a/pages/Lesopoval_Belya_Leped.html
+++ b/pages/Lesopoval_Belya_Leped.html
@@ -14,7 +14,7 @@
     }
   </style> 
     <center><h1>Лесоповал - Белый лебедь</h1></center>
-	<center><audio id="player" src="C:\Караоке\song\Lesopoval_Belya_Leped.mp3" controls></audio>
+	<center><audio id="player" src="song\Lesopoval_Belya_Leped.mp3" controls></audio>
 </center>
 	<center>                   
 	<h1>
