--- a/pages/asmolov-otvetchik.html
+++ b/pages/asmolov-otvetchik.html
@@ -14,7 +14,7 @@
     }
   </style> 
     <center><h1>Владимир Асмолов - Автоответчик</h1></center>
-	<center><audio id="player" src="C:\Караоке\song\asmolov-otvetchik.mp3" controls></audio>
+	<center><audio id="player" src="song\asmolov-otvetchik.mp3" controls></audio>
 </center>
 	<center>
 	<pre class="lyrics">Я  набираю  номер  твой,  
