--- a/pages/bi-2-reki-lyubvi-minus.html
+++ b/pages/bi-2-reki-lyubvi-minus.html
@@ -14,7 +14,7 @@
     }
   </style> 
     <center><h1>Би-2 - Реки любви</h1></center>
-	<center><audio id="player" src="C:\Караоке\song\bi-2-reki-lyubvi-minus.mp3" controls></audio>
+	<center><audio id="player" src="song\bi-2-reki-lyubvi-minus.mp3" controls></audio>
 </center>
 <center>
 <h2>
