--- a/pages/brainstorm_-_a_mi_guljaem__mi_krutie__aga_(zf.fm).html
+++ b/pages/brainstorm_-_a_mi_guljaem__mi_krutie__aga_(zf.fm).html
@@ -14,7 +14,7 @@
     }
   </style> 
     <center><h1>БрэйнСторм - А мы гуляем,мы крутые</h1></center>
-	<center><audio id="player" src="C:\Караоке\song\brainstorm_-_a_mi_guljaem__mi_krutie__aga_(zf.fm).mp3" controls></audio>
+	<center><audio id="player" src="song\brainstorm_-_a_mi_guljaem__mi_krutie__aga_(zf.fm).mp3" controls></audio>
 </center>
 	<center>
 	<h1>
