--- a/pages/Brainstorm_Plenka_Stop.html
+++ b/pages/Brainstorm_Plenka_Stop.html
@@ -14,7 +14,7 @@
     }
   </style> 
     <center><h1>Brainstorm - Ветер</h1></center>
-	<center><audio id="player" src="C:\Караоке\song\Brainstorm_Plenka_Stop.mp3" controls></audio>
+	<center><audio id="player" src="song\Brainstorm_Plenka_Stop.mp3" controls></audio>
 </center>
 	<center>                   
 	<h1>
