--- a/pages/Aria_Poter_ray.html
+++ b/pages/Aria_Poter_ray.html
@@ -14,7 +14,7 @@
     }
   </style> 
     <center><h1>Ария - Потерянный рай</h1></center>
-	<center><audio id="player" src="song\Aria_Poter_ray.mp3" controls></audio>
+	<center><audio id="player" src="song/Aria_Poter_ray.mp3" controls></audio>
 </center>
 	<center>
 	<h1>
