--- a/pages/12-yaroslav-evdokimov-mayskiy-val-s.html
+++ b/pages/12-yaroslav-evdokimov-mayskiy-val-s.html
@@ -14,7 +14,7 @@
     }
   </style> 
     <center><h1>Ярослав Евдокимов - Майский вальс</h1></center>
-	<center><audio id="player" src="song/12-yaroslav-evdokimov-mayskiy-val-s.mp3" controls></audio>
+	<center><audio id="player" src="song/12-yaroslav-evdokimov-mayskiy-val-s.mp3" type="audio/mp3" controls></audio>
 </center>
 	<center>
 	<span>
