--- a/pages/DDT_ETO_VSE.html
+++ b/pages/DDT_ETO_VSE.html
@@ -14,7 +14,7 @@
     }
   </style> 
     <center><h1>ДДТ - Это все</h1></center>
-	<center><audio id="player" src="song\DDT_ETO_VSE.mp3" controls></audio>
+	<center><audio id="player" src="song/DDT_ETO_VSE.mp3" type="audio/mp3" controls></audio>
 </center>
 	<center>                  
 	<h1>
