--- a/pages/Sinya_Ptica_Klen_Wymit.html
+++ b/pages/Sinya_Ptica_Klen_Wymit.html
@@ -14,7 +14,7 @@
     }
   </style> 
     <center><h1>Синяя Птица - Клён</h1></center>
-	<center><audio id="player" src="C:\Караоке\song\Sinya_Ptica_Klen_Wymit.mp3" controls></audio>
+	<center><audio id="player" src="song/Sinya_Ptica_Klen_Wymit.mp3" type="audio/mp3" controls></audio>
 </center>
 	<center>                  
 	<h1>
