--- a/pages/Voskr_Bury_i_metel.html
+++ b/pages/Voskr_Bury_i_metel.html
@@ -14,7 +14,7 @@
     }
   </style> 
     <center><h1>Воскресенье - Бури и метели</h1></center>
-	<center><audio id="player" src="C:\Караоке\song\Voskr_Bury_i_metel.mp3" controls></audio>
+	<center><audio id="player" src="song/Voskr_Bury_i_metel.mp3" type="audio/mp3" controls></audio>
 </center>
 	<center>                  
 	<h1>
