--- a/pages/Voskr_Snow_Women.html
+++ b/pages/Voskr_Snow_Women.html
@@ -14,7 +14,7 @@
     }
   </style> 
     <center><h1>Воскресенье - Снежная баба</h1></center>
-	<center><audio id="player" src="C:\Караоке\song\Voskr_Snow_Women.mp3" controls></audio>
+	<center><audio id="player" src="song/Voskr_Snow_Women.mp3" type="audio/mp3" controls></audio>
 </center>
 	<center>                   
 	<h1>
