--- a/pages/Voskr_When_Poimew_Menya.html
+++ b/pages/Voskr_When_Poimew_Menya.html
@@ -14,7 +14,7 @@
     }
   </style> 
     <center><h1>Воскресенье - Когда поймешь умом</h1></center>
-	<center><audio id="player" src="C:\Караоке\song\Voskr_When_Poimew_Menya.mp3" controls></audio>
+	<center><audio id="player" src="song/Voskr_When_Poimew_Menya.mp3" type="audio/mp3" controls></audio>
 </center>
 	<center>                   
 	<h1>
