--- a/pages/bi-2-skol-zkie-ulicy-minus--2.html
+++ b/pages/bi-2-skol-zkie-ulicy-minus--2.html
@@ -14,7 +14,7 @@
     }
   </style> 
     <center><h1>Би-2 - Скользкие улицы</h1></center>
-	<center><audio id="player" src="song\bi-2-skol-zkie-ulicy-minus--2.mp3" controls></audio>
+	<center><audio id="player" src="song/bi-2-skol-zkie-ulicy-minus--2.mp3" type="audio/mp3" controls></audio>
 </center>
 	<center>
 	<h2>
