--- a/pages/veter_peremen.html
+++ b/pages/veter_peremen.html
@@ -14,7 +14,7 @@
     }
   </style> 
     <center><h1>Би-2 - Ветер перемен</h1></center>
-	<center><audio id="player" src="C:\Караоке\song\veter_peremen.mp3" controls></audio>
+	<center><audio id="player" src="song/veter_peremen.mp3" type="audio/mp3" controls></audio>
 </center>
 	<center>                   <p>Кружит Земля, как в детстве карусель  </p>
 <p>А над Землей кружат Ветра Потерь  </p>
