--- a/pages/Black_Kofe_za_oknom.html
+++ b/pages/Black_Kofe_za_oknom.html
@@ -14,7 +14,7 @@
     }
   </style> 
     <center><h1>Чёрный Кофе - Пылает за окном звезда</h1></center>
-	<center><audio id="player" src="song\Black_Kofe_za_oknom.mp3" controls></audio>
+	<center><audio id="player" src="song/Black_Kofe_za_oknom.mp3" type="audio/mp3" controls></audio>
 </center>
 <center>
 	<h1>
