--- a/pages/Brainstorm_Vixodnie.html
+++ b/pages/Brainstorm_Vixodnie.html
@@ -14,7 +14,7 @@
     }
   </style> 
     <center><h1>Brainstorm - Выходные</h1></center>
-	<center><audio id="player" src="song\Brainstorm_Vixodnie.mp3" controls></audio>
+	<center><audio id="player" src="song/Brainstorm_Vixodnie.mp3" type="audio/mp3" controls></audio>
 </center>
 	<center>               
 <h1>	
