--- a/pages/Lesopoval_ya-kuplyu-tebe-dom-plus.html
+++ b/pages/Lesopoval_ya-kuplyu-tebe-dom-plus.html
@@ -14,7 +14,7 @@
     }
   </style> 
     <center><h1>Лесоповал - Я куплю тебе дом</h1></center>
-	<center><audio id="player" src="C:\Караоке\song\Lesopoval_ya-kuplyu-tebe-dom-plus.mp3" controls></audio>
+	<center><audio id="player" src="song/Lesopoval_ya-kuplyu-tebe-dom-plus.mp3" type="audio/mp3" controls></audio>
 </center>
 	<center>                   
 <h1>
