--- a/pages/Lubov_Razlyka_Ludmila.html
+++ b/pages/Lubov_Razlyka_Ludmila.html
@@ -14,7 +14,7 @@
     }
   </style> 
     <center><h1>Людмила Сенчина - Любовь И Разлука</h1></center>
-	<center><audio id="player" src="C:\Караоке\song\Lubov_Razlyka_Ludmila.mp3" controls></audio>
+	<center><audio id="player" src="song/Lubov_Razlyka_Ludmila.mp3" type="audio/mp3" controls></audio>
 </center>
 	<center>                 
 	<h1>
