--- a/pages/Rojdestvo_Molodost.html
+++ b/pages/Rojdestvo_Molodost.html
@@ -14,7 +14,7 @@
     }
   </style> 
     <center><h1>Рождество - Молодость</h1></center>
-	<center><audio id="player" src="C:\Караоке\song\Rojdestvo_Molodost.mp3" controls></audio>
+	<center><audio id="player" src="song/Rojdestvo_Molodost.mp3" type="audio/mp3" controls></audio>
 </center>
 	<center>                   
 	<h1>
