--- a/pages/Rojdestvo_Tvoi_Glaza.html
+++ b/pages/Rojdestvo_Tvoi_Glaza.html
@@ -14,7 +14,7 @@
     }
   </style> 
     <center><h1>Рождество - Твои глаза</h1></center>
-	<center><audio id="player" src="C:\Караоке\song\Rojdestvo_Tvoi_Glaza.mp3" controls></audio>
+	<center><audio id="player" src="song/Rojdestvo_Tvoi_Glaza.mp3" type="audio/mp3" controls></audio>
 </center>
 	<center>                 
 	<h1>
