--- a/pages/Voskr_Slychilos.html
+++ b/pages/Voskr_Slychilos.html
@@ -14,7 +14,7 @@
     }
   </style> 
     <center><h1>Воскресенье - Случилось что-то в городе моем текст песни</h1></center>
-	<center><audio id="player" src="C:\Караоке\song\Voskr_Slychilos.mp3" controls></audio>
+	<center><audio id="player" src="song/Voskr_Slychilos.mp3" type="audio/mp3" controls></audio>
 </center>
 	<center>                   
     <h1>
