--- a/pages/Voskr_Veterok.html
+++ b/pages/Voskr_Veterok.html
@@ -14,7 +14,7 @@
     }
   </style> 
     <center><h1>Воскресенье - Ветерок</h1></center>
-	<center><audio id="player" src="C:\Караоке\song\Voskr_Veterok.mp3" controls></audio>
+	<center><audio id="player" src="song/Voskr_Veterok.mp3" type="audio/mp3" controls></audio>
 </center>
 	<center>                  
 	<h1>
