--- a/pages/Voskr_ne_ostav_menya.html
+++ b/pages/Voskr_ne_ostav_menya.html
@@ -14,7 +14,7 @@
     }
   </style> 
     <center><h1>Воскресенье - Не Оставь Меня</h1></center>
-	<center><audio id="player" src="C:\Караоке\song\Voskr_ne_ostav_menya.mp3" controls></audio>
+	<center><audio id="player" src="song/Voskr_ne_ostav_menya.mp3" type="audio/mp3" controls></audio>
 </center>
 	<center>
 	<h1>
